fixed alignment issue on brand page sidepanel ads (#154)
* fixed alignment issue on brand page sidepanel ads

* minor additional tweak

* fixed brand page logo height

* chopped 10px off the height

--- a/src/styles/components/brand/_brand.scss
+++ b/src/styles/components/brand/_brand.scss
@@ -22,6 +22,7 @@
     @media #{$large-up} {
         padding-top: 10px;
         margin: 0px 0 30px;
+        padding-bottom: 42px;
     }
 }
 
